--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,5 @@
 {
-  "printWidth": 140,
+  "printWidth": 500,
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
@@ -7,5 +7,5 @@
   "bracketSpacing": false,
   "bracketSameLine": true,
   "singleAttributePerLine": true,
-  "arrowParens": "avoid"
+  "arrowParens": "always"
 }
