createStore의 구조 변경 on 스펙 확정 createComponentStore의 필요성, 구조 개발중

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,6 +6,6 @@
   "singleQuote": false,
   "bracketSpacing": false,
   "bracketSameLine": true,
-  "singleAttributePerLine": true,
+  "singleAttributePerLine": false,
   "arrowParens": "always"
 }
